--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -1,4 +1,8 @@
 .html, body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
     font-family: $font-poppins;
     font-weight: $font-weight-regular;
     color: $color-dark;
@@ -28,6 +32,16 @@
     max-width: 100vw;
 }
 
+a{
+    color: $color-dark;
+    text-decoration: none;
+    transition: color 300ms;
+
+    &:hover {
+        color: $color-theme;
+    }
+}
+
 // QUICK HELP
 .hidden-text{
     display:none;
@@ -44,4 +58,46 @@
 a {
     text-decoration: none;
     transition: color 300ms;
+}
+
+// BUTTONS
+.button {
+    padding:1rem 3rem;
+    border:none;
+    font-family: $font-poppins;
+    font-size: $font-size-16;
+    font-weight: $font-weight-semibold;
+}
+
+.buttondecor{
+    background-image: url('../img/button-decor.svg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+}
+
+.b-theme {
+    background-color: $color-theme;
+    color: white;
+
+}
+
+.b-circle {
+    border-radius: 50%;
+    background-color: $color-gray-10;
+    border:none;
+    box-shadow: 0px 2px 3px 0px $color-gray-20;
+    transition: background-color 500ms;
+
+    img {
+        transition: filter 300ms;
+    }
+
+    &:hover {  
+        background-color: $color-theme;
+
+        img {
+            filter: invert(100);
+        }
+    }
 }
