--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,9 @@
+// CORE
 @import "./core/variables";
 @import "./core/mix-ins";
 @import "./core/utilities";
+
+// SECTIONS
+@import "./sections/header";
+
+@import "./sections/start-main"
