--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -26,6 +26,7 @@ $color-gray-30: #EDEDED;
 $color-gray-40: #BBBBBB;
 $color-gray-50: #ABACAF;
 $color-gray-60: #7E7F80;
+$color-gray-70: #616365;
 
 // BREAKPOINST
 $breakpoint-md: 768px;
