--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -10,6 +10,7 @@
     background-color: rgba(255, 255, 255, 0.185);
     border-radius: 5rem;
     padding:0 2rem;
+    z-index: 10;
 
     // navigation menu md and bigger
     .navigation-menu {
