--- a/scss/sections/_start-main.scss
+++ b/scss/sections/_start-main.scss
@@ -52,6 +52,7 @@
 
 // claearance and arrivals
 .clearance-arrivals {
+
     @include md {
         display: flex;
     }
@@ -117,5 +118,77 @@
 
     .arrivals {
         background-color:#E9E9E9;
+    }
+}
+
+.featured-product {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    justify-items: center;
+
+    @include lg {
+        grid-template-columns: repeat(4, 1fr);
+        max-width: 80vw;
+    }
+}
+
+.pamela-reif-lets-be-conscious {
+    margin-top: 2rem;
+    @include md {
+        display: flex;
+        gap:1rem;
+    }
+
+    .pamela-reif {
+        position: relative;
+        max-width: 100vw;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: contain; 
+        }
+
+        .info {
+            position: absolute;
+            top: 50%;
+            right:1rem;
+            text-align: right;
+            transform: translateY(-50%);
+            color: white;
+            font-weight: $font-weight-bold;
+            font-size: $font-size-20;
+
+            button {
+                font-size: $font-size-13;
+            }
+        }
+    }
+
+    .lets-be-conscious {
+        position: relative;
+        max-width: 100vw;
+
+        img{  
+            width: 100%;
+            height: 100%;
+            object-fit: contain;  
+        }
+
+        .info {
+            position: absolute;
+            top: 50%;
+            left:1rem;
+            text-align: left;
+            transform: translateY(-50%);
+            color: $color-dark;
+            font-weight: $font-weight-bold;
+            font-size: $font-size-20;
+
+            button {
+                font-size: $font-size-13;
+            }
+        }
     }
 }
