--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -32,6 +32,10 @@
     max-width: 100vw;
 }
 
+.flex {
+    display: flex;
+}
+
 a{
     color: $color-dark;
     text-decoration: none;
@@ -115,7 +119,17 @@ a {
 }
 
 // PRODUCT CARDS
-.container{
+.card-container{
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    justify-items: center;
+
+    @include lg {
+        grid-template-columns: repeat(4, 1fr);
+        max-width: 80vw;
+    }
+
     .card {
         border:none;
         margin: 1rem 0;
