--- a/scss/sections/_start-main.scss
+++ b/scss/sections/_start-main.scss
@@ -55,12 +55,13 @@
 
     @include md {
         display: flex;
+        justify-content: center;
     }
 
     .background {
         display: flex;
         position: relative;
-        margin: 1rem auto;
+        margin: 1rem 0;
         justify-content: right;
 
         img {
@@ -72,7 +73,10 @@
             }
 
             @include lg {
-                max-height: initial;
+                max-height: 100%;
+                max-width: 100%;
+                object-fit: contain;
+
             }
         }
         .info {
@@ -121,23 +125,15 @@
     }
 }
 
-.featured-product {
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    justify-items: center;
-
-    @include lg {
-        grid-template-columns: repeat(4, 1fr);
-        max-width: 80vw;
-    }
-}
-
 .pamela-reif-lets-be-conscious {
     margin-top: 2rem;
     @include md {
         display: flex;
         gap:1rem;
+        justify-content: center;
+    }
+
+    @include lg {
     }
 
     .pamela-reif {
@@ -192,3 +188,149 @@
         }
     }
 }
+
+.our-speciality {
+    background-color: $color-gray-30;
+    padding: 0.5rem;
+    margin-top: 2rem;
+
+    @include lg {
+        padding: 2rem;
+    }
+
+    .flex {
+        gap: 0.5rem;
+        justify-content: center;
+        margin-top: 1rem;
+
+        @include lg {
+            gap:2rem;
+            margin-top: 1.5rem;
+        }
+
+        .info-box {
+            flex:1;
+            display: flex;
+            justify-content: space-between;
+            max-width: fit-content;
+            background-color: white;
+
+            .info {
+                flex:1;
+                padding: 1.5rem 0.5rem;
+                text-align: center;
+                position: relative;
+                height: 100%;
+                width: 100%;
+
+                @include lg {
+                    height: fit-content;
+                    width: fit-content;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+
+                p {
+                    font-size: $font-size-13;
+                    font-weight: $font-weight-semibold;
+                    margin-bottom: 1.3rem;
+
+                    @include lg {
+                        font-size: $font-size-20;
+                    }
+
+                }
+
+                a {
+                    font-size: $font-size-13;
+                    text-decoration: underline;
+                    margin-bottom: 0;
+                    position: absolute;
+                    bottom:1rem;
+                    left: 0;
+                    width: 100%;
+
+                    @include lg {
+                        font-size: $font-size-16;
+                        font-weight: $font-weight-semibold;
+                        position:static;
+                    }
+                }
+            }
+
+            img {
+                flex: 1;
+                display: none;
+                flex:1;
+                max-height: 100%;
+                max-width: 40%;
+                object-fit: contain;
+                margin-right: 0.5rem;
+
+                @include md {
+                    display: inline;                
+                }
+
+                @include lg {
+                    max-width: 90%;
+                    max-height: 90%;
+                    object-fit: cover;
+                    margin: auto;
+                    margin-right: 0.5rem;
+                }
+            }
+        }        
+    }
+    
+}  
+
+.sale-showcase {
+    @include lg {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .big-sale-showcase {
+        margin: 2rem 0;
+        position: relative;
+        max-width: fit-content;
+
+        @include md {   
+            max-width: 60vw;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        @include lg {
+            max-width: 100%;
+            max-height: 100%;
+            left:0;
+            transform: initial;
+        }
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: contain;
+        }
+
+        .info {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+    }
+
+    .small-sale-showcase {
+        grid-template-columns: 1fr 1fr;
+
+        @include lg {
+            gap:1rem;
+        }
+    }
+}
+
