--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,5 +5,5 @@
 
 // SECTIONS
 @import "./sections/header";
-
-@import "./sections/start-main"
+@import "./sections/start-main";
+@import "./sections/footer";
