--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
 // SECTIONS
 @import "./sections/header";
 @import "./sections/start-main";
+@import "./sections/contact-main";
 @import "./sections/footer";
