--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -16,10 +16,10 @@
     .navigation-menu {
         display: flex;
         justify-content: space-between;
-        margin-top: auto;
-        margin-bottom: auto;
         list-style-type: none;
         padding:0;
+        margin-top: auto;
+        margin-bottom: auto;
 
         .navigation-menu-item {
             display:none;
@@ -27,7 +27,7 @@
             
 
             &:last-child{
-            margin-right: 0rem;
+            margin-right: 1rem;
             }
 
             @include md {
@@ -41,15 +41,26 @@
     .group {
         display: flex;
         justify-items: space-between;
+        align-items: center;
+        margin-top: auto;
+        margin-bottom: auto;
+        height: fit-content;
 
-        a{
-            margin-right: 1rem;
+        button {
+            margin-right: 0.5rem;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+
+        li{
+            margin:auto;
 
             &:last-child {
                 margin-right: none;
             }
         }
-
 
         .search {
             i {
@@ -63,12 +74,12 @@
 
         // mobile navigation menu
         .dropdown-navigation-menu {
+
             @include md {
                 display:none;
             }
 
             .dropdown-menu {
-                background-color: transparent;
                 font-size: $font-size-13;
             }
         }
