--- a/react/src/assets/scss/core/_utilities.scss
+++ b/react/src/assets/scss/core/_utilities.scss
@@ -174,6 +174,9 @@ a {
     transition: background-color 500ms;
 
     img {
+        height: 90%;
+        width: 90%;
+        object-fit: contain;
         transition: filter 300ms;
     }
 
