--- a/react/src/assets/scss/components/_navigationbar.scss
+++ b/react/src/assets/scss/components/_navigationbar.scss
@@ -19,7 +19,7 @@
         list-style-type: none;
         padding:0;
         margin-top: auto;
-        margin-bottom: auto;
+        margin-bottom: 0.3rem;
 
         .navigation-menu-item {
             display:none;
