--- a/react/src/assets/scss/components/_navigationbar.scss
+++ b/react/src/assets/scss/components/_navigationbar.scss
@@ -40,14 +40,14 @@
     // my account and search
     .group {
         display: flex;
-        justify-items: space-between;
+        justify-items: start;
         align-items: center;
         margin-top: auto;
         margin-bottom: auto;
         height: fit-content;
 
-        button {
-            margin-right: 0.5rem;
+        .navigationbutton {
+            margin-right: 1rem;
 
             &:last-child {
                 margin-right: 0;
