--- a/react/src/assets/scss/core/_utilities.scss
+++ b/react/src/assets/scss/core/_utilities.scss
@@ -98,7 +98,7 @@ a {
         }
     }
 
-    // decoration
+    // decoration from https://stackoverflow.com/questions/60466314/how-to-do-a-partial-border-for-a-button-in-css
     position:relative;
 
     &::before,
@@ -114,18 +114,35 @@ a {
         top:0.4rem;
         border-left:2px solid white;
         border-top:2px solid white;
+        transition: border 300ms;
     }
     &::after{
         right:0.4rem;
         bottom:0.4rem;
         border-right:2px solid white;
         border-bottom:2px solid white;
+        transition: border 300ms;
     }
 }
 
 .b-dark {
     background-color: $color-dark;
     color: white;
+    transition: color 300ms;
+
+    &:hover{
+        color: $color-theme;
+
+        &::before {
+            border-left:2px solid $color-theme;
+            border-top:2px solid $color-theme;
+        }
+        
+        &::after{
+            border-right:2px solid $color-theme;
+            border-bottom:2px solid $color-theme;
+        }
+    }
 
     // decoration
     position:relative;
@@ -143,18 +160,35 @@ a {
         top:0.4rem;
         border-left:2px solid white;
         border-top:2px solid white;
+        transition: border 300ms;
     }
     &::after{
         right:0.4rem;
         bottom:0.4rem;
         border-right:2px solid white;
         border-bottom:2px solid white;
+        transition: border 300ms;
     }
 }
 
 .b-light {
     background-color: white;
     color: $color-dark;
+    transition: color 300ms;
+
+    &:hover{
+        color: $color-theme;
+
+        &::before {
+            border-left:2px solid $color-theme;
+            border-top:2px solid $color-theme;
+        }
+        
+        &::after{
+            border-right:2px solid $color-theme;
+            border-bottom:2px solid $color-theme;
+        }
+    }
 
     // decoration
     position:relative;
@@ -172,12 +206,14 @@ a {
         top:0.4rem;
         border-left:2px solid $color-dark;
         border-top:2px solid $color-dark;
+        transition: border 300ms;
     }
     &::after{
         right:0.4rem;
         bottom:0.4rem;
         border-right:2px solid $color-dark;
         border-bottom:2px solid $color-dark;
+        transition: border 300ms;
     }
 }
 
