--- a/react/src/assets/scss/core/_utilities.scss
+++ b/react/src/assets/scss/core/_utilities.scss
@@ -222,13 +222,15 @@ a {
     background-color: $color-gray-10;
     border:none;
     box-shadow: 0px 2px 3px 0px $color-gray-50;
-    transition: background-color 500ms;
+    transition: background-color 500ms;            
+    margin-left: 0.5rem;
+    position: relative;
 
     img {
         height: 90%;
         width: 90%;
         object-fit: contain;
-        transition: filter 300ms;
+        transition: filter 300ms, background-color 300ms;
     }
 
     &:hover {  
@@ -236,6 +238,29 @@ a {
 
         img {
             filter: invert(100);
+        }
+
+        .notification-pill {
+            background-color: $color-dark;
+        }
+    }
+
+    .notification-pill{
+        position:absolute;
+        top:-1.2rem;
+        left:0;
+        background: $color-theme;
+        transition: all 500ms;
+
+        @include lg {
+            top:-1rem;
+            left:0.7rem;
+            transition: all 500ms;
+        }
+
+        @include md {
+            top:-1rem;
+            left:0.7rem;
         }
     }
 }
