--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -1,9 +1,11 @@
 // CORE
-@import "./core/Variables";
+@import "./core/variables";
 @import "./core/mixins";
 @import "./core/utilities";
 
 // COMPONENTS
+@import "./components/buttons";
+@import "./components/productCard";
 @import "./components/navigationbar";
-@import "./components/Showcase.scss";
+@import "./components/showcase.scss";
 @import "./components/footer.scss";
