useStates and cards worked on

--- a/react/src/assets/scss/components/_Showcase.scss
+++ b/react/src/assets/scss/components/_Showcase.scss
@@ -48,3 +48,82 @@
         }
     }
 }
+
+// winter clearance and new arrivals
+.clearance-arrivals {
+
+    @include md {
+        display: flex;
+        justify-content: center;
+    }
+
+    .background {
+        display: flex;
+        position: relative;
+        margin: 1rem 0;
+        justify-content: right;
+
+        @include lg {
+            margin: 3rem 0;
+        }
+
+        img {
+            max-height: 30vh;
+            max-width: 100%;
+
+            @include md {
+                max-height: 20vh;
+            }
+
+            @include lg {
+                max-height: 100%;
+                max-width: 100%;
+                object-fit: contain;
+
+            }
+        }
+        .info {
+            position: absolute;
+            width: 50%;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+
+            h2 {
+                font-size: $font-size-18;
+                font-weight: $font-weight-bold;
+
+                @include lg {
+                    font-size: $font-size-45;
+                }
+            }
+            p {
+                display:none;
+
+                @include lg {
+                    display: block;
+                }
+            }
+            .button {
+                font-size: $font-size-13;
+                font-weight: $font-weight-medium;
+                padding: 0.5rem 2rem;
+
+                @include lg {
+                    font-size: initial;
+                    font-weight: initial;
+                    padding: 0.8rem 3rem;
+                }
+
+            }
+        }
+    }
+
+    .clearance {
+        background-color:#CAC0BE;
+    }
+
+    .arrivals {
+        background-color:#E9E9E9;
+    }
+}
