home page components done

--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -13,3 +13,6 @@
 @import "./homeview/showcase.scss";
 @import "./homeview/featuredShowcase";
 @import "./homeview/shoppingInfo";
+@import "./homeview/showcaseGrid";
+@import "./homeview/saleShowcase";
+@import "./homeview/companyInformation";
