--- a/react/src/assets/scss/components/_productCard.scss
+++ b/react/src/assets/scss/components/_productCard.scss
@@ -3,7 +3,6 @@
     margin: 1rem 0;
     max-width: fit-content;
     text-align: center;
-    margin: auto;
 
     &:hover {
         .card-background{
@@ -152,5 +151,5 @@
     margin: 2rem auto;
     align-items: center;
     text-align: left;
-    padding: 0 2rem;
+    padding: 0;
 }
