--- a/react/src/assets/scss/homeview/_showcaseGrid.scss
+++ b/react/src/assets/scss/homeview/_showcaseGrid.scss
@@ -1,19 +1,23 @@
 .showcasegrid-container {
     margin:1rem auto;
 
+    @include lg {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;     
+        align-items: center;   
+    }
+
+
     .group {
         position: relative;
+        width: 100%;
+        grid-column: span 2;
 
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-
-            @include lg {
-            min-width: 100%;
-            min-height: 100%;
-            object-fit: cover;           
-            }
 
         }       
 
@@ -36,5 +40,4 @@
             }
         }        
     }
-
 }
