--- a/react/src/assets/scss/core/_utilities.scss
+++ b/react/src/assets/scss/core/_utilities.scss
@@ -65,6 +65,19 @@
     padding: 1rem;
 }
 
+.not-found {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    font-size: $font-size-45;
+    font-weight: $font-weight-bold;
+}
+
 // LINKS
 a{
     color: $color-dark;
