contact page startup

--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -16,3 +16,7 @@
 @import "./homeview/showcaseGrid";
 @import "./homeview/saleShowcase";
 @import "./homeview/companyInformation";
+
+// CONTACT
+@import "./contactview/bredcrumb";
+@import "./contactview/map";
