--- a/react/src/assets/scss/components/_buttons.scss
+++ b/react/src/assets/scss/components/_buttons.scss
@@ -1,6 +1,6 @@
 // BUTTONS
 .button {
-    padding: 0.3 2rem;
+    padding: 0.3rem 2rem;
     border:none;    
     font-family: $font-poppins; 
     font-size: $font-size-13;  
